--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/App.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/App.razor
@@ -2,7 +2,7 @@
 
 <CascadingAuthenticationState>
     <Router AppAssembly="@typeof(App).Assembly" 
-            AdditionalAssemblies="additionalAssemblies">
+            AdditionalAssemblies='new List<Assembly>(){ Assembly.Load("Masa.Stack.Components")}'>
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
             <FocusOnNavigate RouteData="@routeData" Selector="h1" />
@@ -15,14 +15,3 @@
         </NotFound>
     </Router>
 </CascadingAuthenticationState>
-
-@code {
-
-    private List<Assembly> additionalAssemblies = new();
-
-    public App()
-    {
-        var masaStackComponentsAssembly = typeof(Masa.Stack.Components.UserCenter).Assembly;
-        additionalAssemblies.Add(masaStackComponentsAssembly);
-    }
-}
