--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Shared/MainLayout.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Shared/MainLayout.razor
@@ -1,15 +1,8 @@
 ﻿@inherits LayoutComponentBase
 
 <Layout AppId="masa-dcc-web-admin"
-        OnSignOut="SignOut"
+        TeamRouteFormat="team/{0}"
         Logo="https://cdn.masastack.com/stack/images/logo/MASAStack/logo-h-en.png"
         MiniLogo="https://cdn.masastack.com/stack/images/logo/MASAStack/logo.png">
     @Body
 </Layout>
-
-@code {
-    private void SignOut()
-    {
-
-    }
-}
