--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
@@ -103,94 +103,101 @@
                         <MIcon Size=16 Class="mr-2 neutral-lighten-1--text">mdi-magnify</MIcon>
                     </PrependInnerContent>
                 </MTextField>
-                <MButton Class="rounded-pill ml-6" Color="primary" OnClick="ShowAddConfigObjectModalAsync">
+                <MButton Height="40" Width="100" Class="rounded-pill ml-6" Color="primary" OnClick="ShowAddConfigObjectModalAsync">
                     <MIcon Small>mdi-plus </MIcon>@T("Add")
                 </MButton>
             </div>
             <div style="margin:0 -24px; overflow:auto; @ConfigPanelStyle">
-                <MExpansionPanels Flat Accordion>
+                <MExpansionPanels @bind-Values="_selectPanels" Flat Accordion Multiple>
                     @foreach (var configObject in _configObjects)
                     {
                         var formatLabelCode = configObject.FormatLabelCode.Trim().ToLower();
                         if (formatLabelCode == "json")
                         {
-                            <MExpansionPanel Style="margin-bottom: 12px;">
+                            <MExpansionPanel Value="configObject.Id">
                                 <MExpansionPanelHeader Context="_">
-                                    <div class="text-h6 d-flex align-center">
-                                        @if (configObject.FromRelation)
-                                        {
-                                            <MIcon Color="primary" Class="mr-2">mdi-link-variant</MIcon>
-                                        }
-                                        @if (configObject.RelationConfigObjectId == 0 && !configObject.IsPublished && !configObject.IsEditing)
-                                        {
-                                            <div class="mr-2" style="height: 26px;width: 48px; background: #FF7D00; text-align: center; font-size: 12px;color: white; border-radius: 16px; font-weight: normal; line-height: 26px;">
-                                                @T("Modified")
-                                            </div>
-                                        }
-                                        <span>@configObject.Name</span>
-                                        <span class="ml-3 text-caption">|</span>
-                                        <sapn class="ml-2 text-caption">@configObject.FormatName</sapn>
-                                        <MSpacer></MSpacer>
-                                        <MButton StopPropagation Icon Class="mr-4" OnClick="()=> UpdateJsonConfigAsync(configObject)">
-                                            @if (!configObject.IsEditing)
+                                    <ChildContent>
+                                        <div class="text-h6 d-flex align-center">
+                                            @if (configObject.FromRelation)
                                             {
-                                                <MIcon Color="#323D6F">@(configObject.RelationConfigObjectId == 0 ? "mdi-pencil" : "mdi-link-variant-off")</MIcon>
+                                                <MIcon Color="primary" Class="mr-2">mdi-link-variant</MIcon>
                                             }
-                                            else
+                                            @if (configObject.RelationConfigObjectId == 0 && !configObject.IsPublished && !configObject.IsEditing)
                                             {
-                                                <MIcon Color="success">mdi-check</MIcon>
+                                                <div class="mr-2" style="height: 26px;width: 48px; background: #FF7D00; text-align: center; font-size: 12px;color: white; border-radius: 16px; font-weight: normal; line-height: 26px;">
+                                                    @T("Modified")
+                                                </div>
                                             }
-                                        </MButton>
-                                        @if (ConfigObjectType == ConfigObjectType.App)
-                                        {
-                                            <MButton StopPropagation Icon Class="mr-4" OnClick="()=>ShowCloneModalAsync(configObject)"><MIcon Size="20" Color="#323D6F">fas fa-copy</MIcon></MButton>
-                                        }
-                                        <MButton StopPropagation Icon Class="mr-4" OnClick="()=>ShowReleaseModalAsync(configObject)"><MIcon Color="#323D6F">mdi-send</MIcon></MButton>
+                                            <span>@configObject.Name</span>
+                                            <span class="ml-3 text-caption">|</span>
+                                            <sapn class="ml-2 text-caption">@configObject.FormatName</sapn>
+                                            <MSpacer></MSpacer>
+                                            <MButton StopPropagation Icon Class="mr-4" OnClick="()=> UpdateJsonConfigAsync(configObject)">
+                                                @if (!configObject.IsEditing)
+                                                {
+                                                    <MIcon Color="#323D6F">@(configObject.RelationConfigObjectId == 0 ? "mdi-pencil" : "mdi-link-variant-off")</MIcon>
+                                                }
+                                                else
+                                                {
+                                                    <MIcon Color="success">mdi-check</MIcon>
+                                                }
+                                            </MButton>
+                                            @if (ConfigObjectType == ConfigObjectType.App)
+                                            {
+                                                <MButton StopPropagation Icon Class="mr-4" OnClick="()=>ShowCloneModalAsync(configObject)"><MIcon Size="20" Color="#323D6F">fas fa-copy</MIcon></MButton>
+                                            }
+                                            <MButton StopPropagation Icon Class="mr-4" OnClick="()=>ShowReleaseModalAsync(configObject)"><MIcon Color="#323D6F">mdi-send</MIcon></MButton>
 
-                                        <MMenu OffsetY>
-                                            <ActivatorContent>
-                                                <MButton @attributes="@context.Attrs" StopPropagation Icon Class="mr-4">
-                                                    <MIcon Color="#323D6F">mdi-dots-vertical</MIcon>
-                                                </MButton>
-                                            </ActivatorContent>
-                                            <ChildContent>
-                                                <MList>
-                                                    <MListItem OnClick="()=>ShowReleaseHistoryAsync(configObject)">
-                                                        <MIcon Class="mr-4">mdi-history</MIcon>
-                                                        <MListItemContent>
-                                                            <MListItemTitle>@T("Release history")</MListItemTitle>
-                                                        </MListItemContent>
-                                                    </MListItem>
-                                                    <MListItem OnClick="()=>ShowRollbackModalAsync(configObject)">
-                                                        <MIcon Class="mr-4">mdi-repeat</MIcon>
-                                                        <MListItemContent>
-                                                            <MListItemTitle>
-                                                                @T("Rollback")
-                                                            </MListItemTitle>
-                                                        </MListItemContent>
-                                                    </MListItem>
-                                                    <MListItem OnClick="()=>RevokeAsync(configObject)">
-                                                        <MIcon Class="mr-4">mdi-subdirectory-arrow-left</MIcon>
-                                                        <MListItemContent>
-                                                            <MListItemTitle>
-                                                                @T("Revoke")
-                                                            </MListItemTitle>
-                                                        </MListItemContent>
-                                                    </MListItem>
-                                                    <MDivider></MDivider>
-                                                    <MListItem OnClick="()=>RemoveAsync(configObject)">
-                                                        <MIcon Class="mr-4" Color="error">mdi-delete</MIcon>
-                                                        <MListItemContent>
-                                                            <MListItemTitle Class="error--text">
-                                                                @T("Delete")
-                                                            </MListItemTitle>
-                                                        </MListItemContent>
-                                                    </MListItem>
-                                                </MList>
-                                            </ChildContent>
-                                        </MMenu>
-                                        <span class="mr-6 text-caption">|</span>
-                                    </div>
+                                            <MMenu OffsetY>
+                                                <ActivatorContent>
+                                                    <MButton @attributes="@context.Attrs" StopPropagation Icon Class="mr-4">
+                                                        <MIcon Color="#323D6F">mdi-dots-vertical</MIcon>
+                                                    </MButton>
+                                                </ActivatorContent>
+                                                <ChildContent>
+                                                    <MList>
+                                                        <MListItem OnClick="()=>ShowReleaseHistoryAsync(configObject)">
+                                                            <MIcon Class="mr-4">mdi-history</MIcon>
+                                                            <MListItemContent>
+                                                                <MListItemTitle>@T("Release history")</MListItemTitle>
+                                                            </MListItemContent>
+                                                        </MListItem>
+                                                        <MListItem OnClick="()=>ShowRollbackModalAsync(configObject)">
+                                                            <MIcon Class="mr-4">mdi-repeat</MIcon>
+                                                            <MListItemContent>
+                                                                <MListItemTitle>
+                                                                    @T("Rollback")
+                                                                </MListItemTitle>
+                                                            </MListItemContent>
+                                                        </MListItem>
+                                                        <MListItem OnClick="()=>RevokeAsync(configObject)">
+                                                            <MIcon Class="mr-4">mdi-subdirectory-arrow-left</MIcon>
+                                                            <MListItemContent>
+                                                                <MListItemTitle>
+                                                                    @T("Revoke")
+                                                                </MListItemTitle>
+                                                            </MListItemContent>
+                                                        </MListItem>
+                                                        <MDivider></MDivider>
+                                                        <MListItem OnClick="()=>RemoveAsync(configObject)">
+                                                            <MIcon Class="mr-4" Color="error">mdi-delete</MIcon>
+                                                            <MListItemContent>
+                                                                <MListItemTitle Class="error--text">
+                                                                    @T("Delete")
+                                                                </MListItemTitle>
+                                                            </MListItemContent>
+                                                        </MListItem>
+                                                    </MList>
+                                                </ChildContent>
+                                            </MMenu>
+                                            <span class="mr-6 text-caption">|</span>
+                                        </div>
+                                    </ChildContent>
+                                    <ActionsContent>
+                                        <MIcon Color="#485585">
+                                            mdi-chevron-down
+                                        </MIcon>
+                                    </ActionsContent>
                                 </MExpansionPanelHeader>
                                 <MExpansionPanelContent>
                                     @if (configObject.FromRelation && configObject.RelationConfigObjectId != 0)
@@ -213,11 +220,12 @@
                                     }
                                     <JsonEditor Disabled="!configObject.IsEditing" @bind-Value="@configObject.Content"></JsonEditor>
                                 </MExpansionPanelContent>
+                                <hr class="mx-6" style="background: none repeat scroll 0 0 #E9EDF7; border: thin none; height: 1px;" />
                             </MExpansionPanel>
                         }
                         else if (formatLabelCode == "properties")
                         {
-                            <MExpansionPanel>
+                            <MExpansionPanel Value="configObject.Id">
                                 <MExpansionPanelHeader Context="_">
                                     <div class="text-h6 d-flex align-center">
                                         @if (configObject.FromRelation)
@@ -332,9 +340,9 @@
                                     }
                                     else
                                     {
-                                        <ElevationTab TabIndex="_tabIndex"
+                                        <ElevationTab Tab="@_tabText"
                                           Left
-                                          TabIndexChanged="index=>HandleTabIndexChanged(index,configObject.ConfigObjectPropertyContents)"
+                                          TabChanged="tabText=>HandleTabIndexChanged(tabText, configObject.ConfigObjectPropertyContents)"
                                           TabMinWidth="70"
                                           ItemsClass="rounded-5"
                                           Dense
@@ -414,7 +422,7 @@
                         }
                         else
                         {
-                            <MExpansionPanel Style="margin-bottom: 12px;">
+                            <MExpansionPanel Value="configObject.Id">
                                 <MExpansionPanelHeader Context="_">
                                     <div class="text-h6 d-flex align-center">
                                         @if (configObject.FromRelation)
@@ -558,7 +566,7 @@
                     <MTextField Class="mt-12" Dense Label="@T("Release name")" Outlined @bind-Value="_configObjectReleaseModal.Data.Name"></MTextField>
                     <MTextarea Dense Label="@T("Description")" Outlined @bind-Value="_configObjectReleaseModal.Data.Comment"></MTextarea>
                     <p class="neutral--text" style="font-size:14px; font-weight:700;">@T("Changed configuration")</p>
-                    @if (_selectConfigObject.FormatLabelCode.ToLower() == "properties")
+                @if (_selectConfigObject.FormatLabelCode.ToLower() == "properties")
                 {
                     <div style="border-radius:8px; border:1px solid #E2E7F4;" class="py-3 mt-4">
                         <MDataTable Headers="_releaseHeaders"
@@ -706,8 +714,8 @@
                 {
                     <ElevationTab Class="mt-12"
                               Left
-                              TabIndex="_releaseTabIndex"
-                              TabIndexChanged="index=>ReleaseHistoryTabIndexChanged(index)"
+                              Tab="@_releaseTabText"
+                              TabChanged="tabText=>ReleaseHistoryTabIndexChanged(tabText)"
                               ItemsClass="rounded-2"
                               Dense
                               Tabs="@(new List<string>{ @T("All configuration"), @T("Changed configuration")})">
@@ -869,7 +877,7 @@
                             </MRow>
                         </div>
                         <div class="d-flex justify-end align-end full-height" style="width:100%;">
-                            <MButton Disabled="@(!_cloneAppSelect && !_cloneEnvSelect || (_cloneAppSelect && _cloneSelectAppId==0))" Width="100" Class="rounded-pill" Color="primary" OnClick="CloneNextClick">@T("Next")</MButton>
+                            <MButton Disabled="@(!_cloneAppSelect && !_cloneEnvSelect || (_cloneAppSelect && _cloneSelectAppId==0))" Height="40" Width="100" Class="rounded-pill" Color="primary" OnClick="CloneNextClick">@T("Next")</MButton>
                         </div>
                     </div>
                 </MStepperContent>
@@ -905,7 +913,7 @@
                                                     {
                                                         <MButton Outlined Color="warning" Class="mr-4" OnClick="()=>CloneConfigObjectCoverClick(configObject)">
                                                             <MIcon>mdi-alert-outline</MIcon>
-                                                            解决冲突
+                                                            @T("Conflict resolution")
                                                         </MButton>
                                                     }
                                                     <MCheckbox Value="configObject.IsChecked"
