--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Label.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Label.razor
@@ -81,7 +81,7 @@
     </MCol>
 </MRow>
 
-<SheetDialog Value="_labelModal.Visible" ValueChanged="LabelModalValueChanged" Title="@T("Edit")" Icon="mdi-circle" IconColor="success">
+<SSheetDialog Value="_labelModal.Visible" ValueChanged="LabelModalValueChanged" Title="@T("Edit")" Icon="mdi-circle" IconColor="success">
     <MForm Class="full-height" Context="formContext" EnableValidation Model="_labelModal.Data">
         <div class="d-flex flex-column" style="width:100%; height:100%; padding: 48px 228px; overflow: hidden;">
             <div class="full-height" style="overflow-y: auto;">
@@ -115,4 +115,4 @@
             </div>
         </div>
     </MForm>
-</SheetDialog>
+</SSheetDialog>
