--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RelationModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RelationModal.razor
@@ -1,6 +1,6 @@
 ﻿@inherits MasaCompontentBase
 
-<SheetDialog Value="Value" ValueChanged="SheetDialogValueChanged" Title="@T("Relation public config")" Icon="mdi-circle" IconColor="success">
+<SSheetDialog Value="Value" ValueChanged="SheetDialogValueChanged" Title="@T("Relation public config")" Icon="mdi-circle" IconColor="success">
     <div class="d-flex flex-column" style="width:100%; height:100%; padding: 48px 228px; overflow: hidden;">
         <div class="full-height" style="overflow: auto;">
             <div class="text-h6 d-flex align-center">
@@ -98,4 +98,4 @@
             <MButton Class="rounded-pill" Color="primary" Width="100" OnClick="HandleOnSubmitAsync">@T("Submit")</MButton>
         </div>
     </div>
-</SheetDialog>
+</SSheetDialog>
